# Nova-Architect-cli

./: .dockerignore  .gitignore  Dockerfile  MANIFEST.in  README.md  docker-compose.yml  pyproject.toml  setup.py
demo/: reset_demo.py  setup_demo.py
nova_architect/: __init__.py  cli.py
nova_architect/backend/: __init__.py  act_executor.py  architect.py  config.py  database.py  exporter.py  main.py  requirements.txt  templates.py  vision.py  voice_handler.py
nova_architect/frontend/: index.html
